Modified test environment and pytest support
Some folders do not have access by user so
removed from pytest call and modified request calls
to expect 201 for created and 409 if the resource
exists
